fix: env variables, spacing and scroll

--- a/public/css/home.module.css
+++ b/public/css/home.module.css
@@ -6,6 +6,8 @@
   max-width: 100%;
   width: 100%;
   height: 100%;
+  
+  margin-top: 12px;
 }
 
 .cardsWrapper {
@@ -17,4 +19,6 @@
   width: 100%;
   gap: 24px;
   overflow: hidden;
+
+  margin-top: 24px;
 }
